# option-pricer-kit

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
app/: requirements.txt  streamlit_app.py
cpp/: CMakeLists.txt
cpp/include/greeks/: BSGreeks.h
cpp/include/models/: BlackScholesModel.h
cpp/include/pricing/: AnalyticPricer.h  FDPricer.h  FDSettings.h  MCSettings.h  MonteCarloPricer.h
cpp/include/products/: AmericanOption.h  AsianOption.h  BarrierOption.h  VanillaOption.h
cpp/include/utils/: FDUtils.h  ImpliedVol.h  MathUtils.h
cpp/src/greeks/: BSGreeks.cpp
cpp/src/models/: BlackScholesModel.cpp
cpp/src/pricing/: AnalyticPricer.cpp  FDPricer.cpp  FDSettings.cpp  MCSettings.cpp  MonteCarloPricer.cpp
cpp/src/products/: AmericanOption.cpp  AsianOption.cpp  BarrierOption.cpp  VanillaOption.cpp
cpp/src/utils/: FDUtils.cpp  ImpliedVol.cpp  MathUtils.cpp
cpp/tests/: CMakeLists.txt  test_main.cpp
python/: CMakeLists.txt  __init__.py  bindings.cpp  setup.py
